<resources>
    <string name="app_name">Cronômetro e Temporizador</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_cron">Cronômetro</string>
    <string name="bt_temp">Temporizador</string>

    <string name="tvInicial">00:00:00</string>
    <string name="btStart">START</string>
    <string name="btStop">STOP</string>
    <string name="btReset">RESET</string>

    <string name="textInicCron">Selecione o Tempo</string>
    <string name="textHora">Hora(s)</string>
    <string name="textMin">Minutos(s)</string>
    <string name="textSecs">Segundo(s)</string>
    <string name="btResume">RESUME</string>

    <string name="textTelaInic">Seja Bem Vindo</string>
    <string name="textTelaInicFuncs">Escolha alguma opção abaixo</string>
</resources>
